<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.dashboard.HomeFragment">

    <include
        android:id="@+id/HeaderLayout"
        layout="@layout/header_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/HeaderLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:background="@drawable/home_bg"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/dimen_20dp"
            app:cardElevation="@dimen/dimen_4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivUserPic"
                    android:layout_width="@dimen/dimen_110dp"
                    android:layout_height="@dimen/dimen_110dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dimen_22dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    app:srcCompat="@drawable/ic_profile_demo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivUserPic"
                    android:layout_centerHorizontal="true"
                    android:text="@string/abraham_thomas"
                    android:textColor="@color/textColorBlue"
                    android:textSize="@dimen/dimen_22sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/rlUserDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvUserName"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:gravity="center_horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvUserLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/peral_land_east"
                        android:textColor="@color/colorDiv"
                        android:textSize="@dimen/dimen_12sp"
                        android:textStyle="normal" />

                    <View
                        android:id="@+id/vLocation"
                        android:layout_width="@dimen/dimen_10dp"
                        android:layout_height="@dimen/dimen_10dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:layout_toEndOf="@+id/tvUserLocation"
                        android:background="@drawable/ic_diamond_shape" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvUserType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/vLocation"
                        android:text="#56566"
                        android:textColor="@color/colorDiv"
                        android:textSize="@dimen/dimen_12sp"
                        android:textStyle="normal" />

                    <View
                        android:id="@+id/vType"
                        android:layout_width="@dimen/dimen_10dp"
                        android:layout_height="@dimen/dimen_10dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:layout_toEndOf="@+id/tvUserType"
                        android:background="@drawable/ic_diamond_shape" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvUserGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/vType"
                        android:text="@string/male"
                        android:textColor="@color/colorDiv"
                        android:textSize="@dimen/dimen_12sp"
                        android:textStyle="normal" />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rlSocial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlUserDescription"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:gravity="center_horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivTwitter"
                        android:layout_width="@dimen/dimen_26dp"
                        android:layout_height="@dimen/dimen_26dp"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:background="@drawable/ic_social_bg"
                        android:padding="@dimen/dimen_8dp"
                        app:srcCompat="@drawable/ic_twitter" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivLinkedIn"
                        android:layout_width="@dimen/dimen_26dp"
                        android:layout_height="@dimen/dimen_26dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:layout_toEndOf="@+id/ivTwitter"
                        android:background="@drawable/ic_social_bg"
                        android:padding="@dimen/dimen_8dp"
                        app:srcCompat="@drawable/ic_linked_in" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivFacebook"
                        android:layout_width="@dimen/dimen_26dp"
                        android:layout_height="@dimen/dimen_26dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:layout_toEndOf="@+id/ivLinkedIn"
                        android:background="@drawable/ic_social_bg"
                        android:padding="@dimen/dimen_8dp"
                        app:srcCompat="@drawable/ic_fb" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivWhatsApp"
                        android:layout_width="@dimen/dimen_26dp"
                        android:layout_height="@dimen/dimen_26dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:layout_toEndOf="@+id/ivFacebook"
                        android:background="@drawable/ic_social_bg"
                        android:padding="@dimen/dimen_8dp"
                        app:srcCompat="@drawable/ic_whatsapp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivGPlus"
                        android:layout_width="@dimen/dimen_26dp"
                        android:layout_height="@dimen/dimen_26dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:layout_toEndOf="@+id/ivWhatsApp"
                        android:background="@drawable/ic_social_bg"
                        android:padding="@dimen/dimen_8dp"
                        app:srcCompat="@drawable/ic_g_plus" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/llUserDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlSocial"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:background="@drawable/details_bg"
                    android:orientation="horizontal"
                    android:weightSum="2">


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/dimen_12dp"
                        android:paddingBottom="@dimen/dimen_14dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivAddress"
                            android:layout_width="@dimen/dimen_20dp"
                            android:layout_height="@dimen/dimen_20dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/dimen_12dp"
                            android:layout_marginEnd="@dimen/dimen_10dp"
                            android:background="@drawable/ic_circle_bg"
                            android:padding="@dimen/dimen_6dp"
                            app:srcCompat="@drawable/ic_location" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTextAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/ivAddress"
                            android:text="@string/address"
                            android:textColor="@color/colorContactText"
                            android:textSize="@dimen/dimen_12sp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvTextAddress"
                            android:layout_toEndOf="@+id/ivAddress"
                            android:text="601 Lakeland Terrace"
                            android:textColor="@color/colorContactText"
                            android:textSize="@dimen/dimen_12sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorContactDiv" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/dimen_12dp"
                        android:paddingBottom="@dimen/dimen_14dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivContact"
                            android:layout_width="@dimen/dimen_20dp"
                            android:layout_height="@dimen/dimen_20dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/dimen_12dp"
                            android:layout_marginEnd="@dimen/dimen_10dp"
                            app:srcCompat="@drawable/ic_phone" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTextPhoneNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/ivContact"
                            android:text="@string/phone_number"
                            android:textColor="@color/colorContactText"
                            android:textSize="@dimen/dimen_12sp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvPhoneNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvTextPhoneNumber"
                            android:layout_toEndOf="@+id/ivContact"
                            android:text="91 6456584156"
                            android:textColor="@color/colorContactText"
                            android:textSize="@dimen/dimen_12sp" />
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rlHouseholds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llUserDetails"
                    android:layout_marginTop="@dimen/dimen_18dp"
                    android:background="@drawable/house_holds_bg"
                    android:paddingTop="@dimen/dimen_12dp"
                    android:paddingEnd="@dimen/dimen_0dp"
                    android:paddingBottom="@dimen/dimen_14dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTextHouseholds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/dimen_4dp"
                        android:text="@string/my_households"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:textColor="@color/textColorBlue"
                        android:textSize="@dimen/dimen_14sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/vTextHouseholds"
                        android:layout_width="@dimen/dimen_10dp"
                        android:layout_height="@dimen/dimen_2dp"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:layout_below="@+id/tvTextHouseholds"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:background="@color/colorRed" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcvHouseholdsList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vTextHouseholds"
                        android:layout_marginTop="@dimen/dimen_6dp"
                        android:paddingStart="@dimen/dimen_10dp"
                        android:paddingEnd="@dimen/dimen_0dp"
                        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/households_item_layout"
                        tools:orientation="horizontal" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlHouseholds"
                    android:layout_marginTop="@dimen/dimen_18dp"
                    android:paddingStart="@dimen/dimen_16dp"
                    android:paddingTop="@dimen/dimen_12dp"
                    android:paddingEnd="@dimen/dimen_0dp"
                    android:paddingBottom="@dimen/dimen_20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTextBirthdays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/dimen_4dp"
                        android:text="@string/birthdays"
                        android:textColor="@color/textColorBlue"
                        android:textSize="@dimen/dimen_14sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/vTextBirthdays"
                        android:layout_width="@dimen/dimen_10dp"
                        android:layout_height="@dimen/dimen_2dp"
                        android:layout_below="@+id/tvTextBirthdays"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:background="@color/colorRed" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTextWeddingAnniversary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_14dp"
                        android:layout_toEndOf="@+id/tvTextBirthdays"
                        android:alpha="0.3"
                        android:lineSpacingExtra="@dimen/dimen_4dp"
                        android:text="@string/wedding_anniversary"
                        android:textColor="@color/textColorBlue"
                        android:textSize="@dimen/dimen_14sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/vTextWeddingAnniversary"
                        android:layout_width="@dimen/dimen_10dp"
                        android:layout_height="@dimen/dimen_2dp"
                        android:layout_marginStart="@dimen/dimen_14dp"
                        android:layout_toEndOf="@+id/tvTextBirthdays"
                        android:layout_below="@+id/tvTextWeddingAnniversary"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:background="@color/colorRed"
                        android:visibility="invisible"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcvBirthdaysList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vTextBirthdays"
                        android:layout_marginTop="@dimen/dimen_6dp" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>